--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "restify": "^4.0.3",
     "config-multipaas": "0.2.2",
     "pg": "^4.4.3",
-    "pg-query": "^0.11.0"
+    "pg-query": "^0.11.0",
+    "body-parser": "^1.8.3",
+    "express": "^4.9.4",
+    "jwt-simple": "^0.2.0",
+    "morgan": "^1.3.1"
   },
   "devDependencies": {
     "tap": "^5.7.0"
